@@ -116,6 +116,11 @@ GNU coreutils NEWS                                    -*- outline -*-
 
   base64 encoding throughput for bulk data is increased by about 60%.
 
+  md5sum uses libcrypto hash routines where available to potentially
+  get better performance through using more system specific code.
+  sha1sum for example has improved throughput by 40% on an i3-2310M.
+  This also affects sha1sum, sha224sum, sha256sum, sha384sum and sha512sum.
+
   stat and tail work better with EFIVARFS, EXOFS, F2FS, SNFS and UBIFS.
   stat -f --format=%T now reports the file system type, and tail -f now uses
   inotify for files on those file systems, rather than the default (for unknown
